--- a/email 07/index.html
+++ b/email 07/index.html
@@ -20,7 +20,7 @@
       }
       @media (prefers-color-scheme: dark){
         .card{background:#F2EEF4!important;color:#291142!important}
-        .hero{background:#F2EEF4!important}
+        .hero{background:#291142!important}
         .bluebar{background:#2EB4EF!important}
         .footer{background:#502262!important;color:#F2EEF4!important}
       }
@@ -40,65 +40,61 @@
           <table role="presentation" cellpadding="0" cellspacing="0" width="600" class="wrapper" style="width:37.5rem; max-width:37.5rem;">
             <tr>
               <td class="card" style="background:#ffffff; border-radius:.5rem; overflow:hidden;">
-                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#F2EEF4;">
+                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#291142;">
                   <tr>
-                    <td align="center" style="padding:1.25rem 2rem 1rem 2rem; text-align:center;">
-                      <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2005/img/plure-logo-header.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; margin:0 auto; display:block;">
-                      </a>
+                    <td style="padding:1.25rem 2rem 1.25rem 2rem;">
+                      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
+                        <tr>
+                          <td style="vertical-align:middle;">
+                            <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
+                              <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/plure-logo-footer.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; display:block;">
+                            </a>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td style="padding-top:2rem;">
+                            <p class="hero-title" style="margin:0; font-size:1.75rem; line-height:2.25rem; color:#F2EEF4;">
+                              Antes de fechar seu próximo projeto, avalie isso:
+                            </p>
+                          </td>
+                        </tr>
+                      </table>
                     </td>
                   </tr>
                 </table>
 
-              <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
-                <tr>
-                  <td>
-                    <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2005/img/header-img.png" width="600" alt="Equipe colaborando em reunião" style="display:block; width:100%; height:auto; border:0;">
-                  </td>
-                </tr>
-              </table>
-
-              <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
-                <tr>
-                  <td style="padding:1.5rem 2rem 1.25rem 2rem; color:#291142; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
-                    <p class="greet" style="margin:0 0 .5rem 0; font-size:1.125rem; line-height:1.75rem; font-weight:700; color:#291142;">Olá <span>*|PRIMEIRO_NOME|*</span>, tudo bem?</p>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                      Na Plure, acompanhamos de perto as mudanças do mercado para apoiar empresas que buscam soluções em comunicação visual e brindes corporativos.
-                    </p>
-                    <p style="margin:0 0 .5rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">Hoje queremos compartilhar algumas <span style="font-weight:600;">tendências que estão se destacando em 2025:</span></p>
-                    <ul style="margin:.5rem 0 1rem 0; padding:0 0 0 1.125rem; color:#291142;">
-                      <li style="margin:0 0 .625rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        <strong style="font-weight:600;">Sustentabilidade como prioridade:</strong> pequenas mudanças podem gerar grandes resultados. Recentemente, apoiamos nossos parceiros na adoção de <strong style="font-weight:600;">capas de ráfia reutilizáveis para pallets</strong>, reduzindo o uso de filmes plásticos descartáveis uma solução simples, eficiente e com menor impacto ambiental.
-                      </li>
-                      <li style="margin:0 0 .625rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        <strong style="font-weight:600;">Personalização total:</strong> soluções sob medida para reforçar a identidade de cada marca.
-                      </li>
-                      <li style="margin:0; font-size:.8125rem; line-height:1.5rem;">
-                        <strong style="font-weight:600;">Integração entre físico e digital:</strong> materiais que conectam experiência presencial com canais online.
-                      </li>
-                    </ul>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                      Esses movimentos mostram como é importante contar com fornecedores <strong style="font-weight:600;">que pensam além do produto e atuam de forma consultiva.</strong>
-                    </p>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                      Fale com nosso time e descubra as melhores soluções para o seu projeto.
-                    </p>
-
-                    <table role="presentation" cellpadding="0" cellspacing="0" align="center" style="margin:.25rem auto 0 auto;">
-                      <tr>
-                        <td align="center" style="text-align:center;">
-                          <a href="https://wa.me/5521998333323" target="_blank" rel="noopener"
-                            style="display:inline-block; background:#F2EEF4; color:#10b6eb !important; font-weight:700; text-decoration:none; border-radius:.375rem; padding:.75rem 1.25rem; font-size:.8125rem; line-height:1.25rem; border:.125rem solid #10b6eb;">
-                            Entre em contato
-                          </a>
-                        </td>
-                      </tr>
-                    </table>
-
-                  </td>
-                </tr>
-              </table>
-
+                <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
+                  <tr>
+                    <td style="padding:1.5rem 2rem; color:#291142; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem;">
+                        Na hora de contratar um fornecedor de brindes ou comunicação visual, o que parece simples pode se tornar um desafio. Prazos apertados, falta de acompanhamento e retrabalhos são problemas comuns que podem comprometer todo o projeto.
+                      </p>
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem;">
+                        Você já passou por alguma dessas situações?
+                      </p>
+                      <p style="margin:0 0 .5rem 0; font-size:.8125rem; line-height:1.5rem;">
+                        Para garantir um bom resultado, sem dor de cabeça, fique de olho em três pontos:
+                      </p>
+                      <ul style="margin:.25rem 0 1rem 0; padding:0 0 0 1.125rem; color:#291142;">
+                        <li style="margin:0 0 .5rem 0; font-size:.8125rem; line-height:1.5rem;">
+                          ✅ <strong>Agilidade:</strong> respostas rápidas e prazos cumpridos fazem toda a diferença.
+                        </li>
+                        <li style="margin:0 0 .5rem 0; font-size:.8125rem; line-height:1.5rem;">
+                          ✅ <strong>Atenção consultiva:</strong> um parceiro que entende sua necessidade e propõe soluções práticas.
+                        </li>
+                        <li style="margin:0; font-size:.8125rem; line-height:1.5rem;">
+                          ✅ <strong>Entrega completa:</strong> gestão do projeto do orçamento à entrega, sem depender de terceiros.
+                        </li>
+                      </ul>
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem;">
+                        A escolha certa transforma seu projeto em sucesso.
+                      </p>
+                      <p style="margin:0; font-size:.8125rem; line-height:1.5rem;">
+                        Conte com a Plure para simplificar cada etapa.
+                      </p>
+                    </td>
+                  </tr>
+                </table>
 
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="bluebar" style="background:#10b6eb;">
                   <tr>
