--- a/email 10/index.html
+++ b/email 10/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="x-preheader" content="Educação e comunicação caminhando juntas para inspirar, acolher e fortalecer a identidade das escolas.">
-    <title>Projetos educacionais — Plure</title>
+    <meta name="x-preheader" content="Prepare sua marca para encerrar o ano em grande estilo com brindes, kits e materiais visuais sob medida.">
+    <title>Prontos para apoiar sua empresa no que vem pela frente — Plure</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
       @media only screen and (max-width:37.5rem){
@@ -37,7 +37,10 @@
       }
     </style>
   </head>
-  <body role="article" aria-roledescription="email" style="margin:0; padding:0; width:100%!important; height:100%!important; background:#f2f4f7; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
+  <body role="article" aria-roledescription="email" style="margin:0; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
+    <div style="display:none; max-height:0; overflow:hidden; font-size:1px; line-height:1px; color:#f2f4f7;">
+      Conte com a Plure para comunicação visual e brindes corporativos — rápido e simples.&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
+    </div>
 
     <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background:#f2f4f7;">
       <tr>
@@ -45,11 +48,11 @@
           <table role="presentation" cellpadding="0" cellspacing="0" width="600" class="wrapper" style="width:37.5rem; max-width:37.5rem;">
             <tr>
               <td class="card" style="background:#F2EEF4; border-radius:.5rem; overflow:hidden;">
-                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#291142;">
+                <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
                   <tr>
-                    <td align="center" style="padding:1.25rem 2rem; text-align:center;">
+                    <td align="center" style="padding:0.5rem 1.5rem 0 1.5rem;">
                       <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/plure-logo-footer.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; display:block; margin:0 auto; filter:brightness(0) invert(1);">
+                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2005/img/plure-logo-header.png" width="92" height="32" alt="Plure" style="height:auto; margin:0 auto 2.5rem auto;">
                       </a>
                     </td>
                   </tr>
@@ -57,67 +60,21 @@
 
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
                   <tr>
-                    <td class="card-pad" style="padding:1.5rem 2rem .5rem 2rem; color:#291142;">
-                      <p style="margin:0 0 .75rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        Olá [Nome], tudo bem? Aqui é o André da Plure.
+                    <td class="p-body" style="padding:0 2.5rem 2.5rem 2.5rem; font-family:'Open Sans', Arial, Helvetica, sans-serif; color:#291142;">
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.25rem;">
+                        Olá <span>*|PRIMEIRO_NOME|*</span>,
                       </p>
-
-                      <p style="margin:0 0 .75rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        Acreditamos que <strong>educação e comunicação caminham juntas</strong> e que cada projeto escolar é uma oportunidade de inspirar, acolher e fortalecer a identidade da marca.
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
+                        Mais um mês se encerra e queremos reforçar algo essencial: nossa parceria com você. Seguimos juntos para os próximos meses, oferecendo sempre a confiança, o cuidado e a segurança que sua empresa precisa em cada projeto de comunicação visual e brindes corporativos.
                       </p>
-
-                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        Por isso, temos orgulho de colaborar com instituições como <strong>Cultura Inglesa</strong>,
-                        <strong>Colégio Cruzeiro</strong> e <strong>Escola Britânica</strong>, desenvolvendo soluções que
-                        <strong> educam, conectam e encantam</strong>.
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
+                        Neste período, apoiamos empresas de diferentes setores com soluções práticas e entregas seguras, porque acreditamos que cada detalhe faz diferença no resultado.
                       </p>
-                    </td>
-                  </tr>
-
-                  <tr>
-                    <td style="padding:0 1.25rem 0 1.25rem;">
-                      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="no-stack">
-                        <tr>
-                          <td class="col stack" width="33.33%" valign="top" style="padding:.5rem; text-align:center;">
-                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2015/img/sacochila.png" width="168" height="140" alt="Sacochila Cultura Inglesa" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
-                            <p style="margin:0; font-size:.75rem; line-height:1.25rem; color:#291142;">Sacochila Cultura Inglesa</p>
-                          </td>
-                          <td class="col stack" width="33.33%" valign="top" style="padding:.5rem; text-align:center;">
-                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2015/img/totem.png" width="168" height="140" alt="Totem Escola Britânica" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
-                            <p style="margin:0; font-size:.75rem; line-height:1.25rem; color:#291142;">Totem Escola Britânica</p>
-                          </td>
-                          <td class="col stack" width="33.33%" valign="top" style="padding:.5rem; text-align:center;">
-                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2015/img/kit.png" width="168" height="140" alt="Kit escolar colégio Cruzeiro" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
-                            <p style="margin:0; font-size:.75rem; line-height:1.25rem; color:#291142;">Kit escolar colégio Cruzeiro</p>
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-
-                  <tr>
-                    <td style="padding:1rem 2rem 0 2rem;">
-                      <p style="margin:0 0 .75rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        Seja em <strong>campanhas de matrícula</strong>, <strong>sinalização</strong> ou <strong>kits personalizados</strong>, nosso propósito é o mesmo:
-                        <strong> tornar a comunicação das escolas mais leve, inteligente e eficaz</strong>.
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
+                        E se já tiver um novo projeto em mente, é só responder a este email. Estamos prontos para apoiar.
                       </p>
-
-                      <p style="margin:0 0 .75rem 0; font-size:.8125rem; line-height:1.5rem; font-weight:700;">
-                        Vamos planejar juntos seu próximo projeto educacional?
-                      </p>
-
-                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        Um abraço,<br><strong>André</strong>
-                      </p>
-                    </td>
-                  </tr>
-
-                  <tr>
-                    <td style="padding:0 2rem 1.5rem 2rem; text-align:center;">
-                      <a href="https://wa.me/5521998333323" target="_blank" rel="noopener"
-                         style="display:inline-block; background:#502262; color:#F2EEF4; font-weight:600; font-size:.875rem; line-height:1rem; text-decoration:none; padding:.875rem 1.25rem; border-radius:.375rem;">
-                        Planejar meu projeto!
-                      </a>
+                      <p style="margin:0; font-size:13px; line-height:22px;">Um abraço,</p>
+                      <p style="margin:0; font-size:13px; line-height:22px; font-weight:700;">Equipe Plure</p>
                     </td>
                   </tr>
                 </table>
