--- a/email 12/index.html
+++ b/email 12/index.html
@@ -55,7 +55,7 @@
                   <tr>
                     <td align="center" style="padding:0.5rem 1.5rem 0 1.5rem;">
                       <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2005/img/plure-logo-header.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; margin:0 auto; display:block;">
+                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2011/img/plure-logo-header.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; margin:0 auto; display:block;">
                       </a>
                     </td>
                   </tr>
@@ -64,28 +64,31 @@
               <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="p-body" style="padding:0 2.5rem 2.5rem 2.5rem; font-family:'Open Sans', Arial, Helvetica, sans-serif; color:#291142;">
-                    <p style="margin:2rem 0 1rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700;">
-                      Olá <span>*|PRIMEIRO_NOME|*</span>, aqui é o Cícero da Plure.
-                    </p>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem; font-weight:400;">
-                      Fim de ano é sempre correria entre eventos, ativações e ajustes de comunicação.
-                      Nesse momento, a Plure está aqui para simplificar sua rotina e garantir entregas no
-                      prazo, com qualidade e tranquilidade.
+                    <p style="margin:2rem 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
+                      Dezembro chega com festas, confraternizações e férias e, junto, a correria!
                     </p>
                     <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
-                      Com um <strong>atendimento consultivo e próximo, cuidamos de cada detalhe, do planejamento à execução</strong>
-                      para que você tenha resultados visíveis e sem complicações.
+                      Planejar seus brindes e comunicação visual ainda em novembro garante
+                      <strong>prazos cumpridos, economia e resultados melhores.</strong>
                     </p>
                     <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
-                      Deixe seus próximos projetos de comunicação visual em boas mãos. Estamos prontos para cuidar de tudo por você!
+                      Na Plure, orientamos você em cada etapa, evitando imprevistos e simplificando processos.
+                      Assim, sua marca se destaca sem preocupações.
                     </p>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
-                      Fale com nossa equipe pelo
-                      <a href="https://wa.me/5521998333323" target="_blank" rel="noopener" style="color:#291142; text-decoration:underline; font-weight:700;">WhatsApp</a>
-                      ou responda a este e-mail e garanta entregas de fim de ano com mais tranquilidade.
+                    <p style="margin:0 0 1.5rem 0; font-size:.8125rem; line-height:1.375rem;">
+                      Garanta seu planejamento agora e viva um fim de ano mais leve.
                     </p>
-                    <p style="margin:0; font-size:13px; line-height:22px;">Um abraço,</p>
-                    <p style="margin:0; font-size:13px; line-height:22px; font-weight:700;">Cícero</p>
+
+                    <table role="presentation" cellpadding="0" cellspacing="0" align="center" style="margin:0 auto 1rem auto;">
+                      <tr>
+                        <td align="center" style="border:2px solid #502262; border-radius:.5rem;">
+                          <a href="https://wa.me/5521998333323" target="_blank" rel="noopener"
+                             style="display:inline-block; padding:.75rem 1rem; font-family:'Open Sans', Arial, Helvetica, sans-serif; font-size:.875rem; line-height:1rem; color:#502262; text-decoration:none; font-weight:700;">
+                            Agende seu projeto!
+                          </a>
+                        </td>
+                      </tr>
+                    </table>
                   </td>
                 </tr>
               </table>
@@ -107,18 +110,18 @@
                         <tr>
                           <td class="footer-stack" width="45%" valign="middle" style="padding-right:1rem; text-align:center; vertical-align:middle;">
                             <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                              <img class="logo-footer" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/plure-logo-footer.png" width="70%" height="70%" alt="Plure" style="height:auto; filter:brightness(0) invert(1); margin:0 auto .75rem auto; display:block;">
+                              <img class="logo-footer" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2011/img/plure-logo-footer.png" width="240" height="auto" alt="Plure" style="height:auto; filter:brightness(0) invert(1); margin:0 auto .75rem auto; display:block;">
                             </a>
                             <table role="presentation" cellpadding="0" cellspacing="0" align="center">
                               <tr class="icons-row">
                                 <td style="padding-right:.625rem; vertical-align:middle;">
                                   <a href="https://www.instagram.com/plure.vc/" target="_blank" rel="noopener" aria-label="Instagram" style="text-decoration:none;">
-                                    <img class="icon-social" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/instagram-icon.png" width="28" height="28" alt="Instagram" style="display:block;">
+                                    <img class="icon-social" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2011/img/instagram-icon.png" width="28" height="28" alt="Instagram" style="display:block;">
                                   </a>
                                 </td>
                                 <td style="vertical-align:middle;">
                                   <a href="https://www.linkedin.com/company/plure/" target="_blank" rel="noopener" aria-label="LinkedIn" style="text-decoration:none;">
-                                    <img class="icon-social" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/linkedin-icon.png" width="28" height="28" alt="LinkedIn" style="display:block;">
+                                    <img class="icon-social" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2011/img/linkedin-icon.png" width="28" height="28" alt="LinkedIn" style="display:block;">
                                   </a>
                                 </td>
                               </tr>
