--- a/email 20/index.html
+++ b/email 20/index.html
@@ -79,7 +79,7 @@
                       <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="no-stack">
                         <tr>
                           <td class="col stack" width="33.33%" valign="top" style="padding:.5rem .75rem; text-align:left; color:#291142; font-size:.75rem; line-height:1.25rem;">
-                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2015/img/sacochila.png" width="168" height="140" alt="Sacochilas personalizadas em nylon" style="width:100%; max-width:10.5rem; height:auto; display:block; margin:0 auto .5rem auto; border-radius:.25rem;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2020/img/cultura.png" width="168" height="140" alt="Sacochilas personalizadas em nylon" style="width:100%; max-width:10.5rem; height:auto; display:block; margin:0 auto .5rem auto; border-radius:.25rem;">
                             <p style="margin:0 0 .8rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700;">
                               Cultura Inglesa
                             </p>
@@ -91,7 +91,7 @@
                           </td>
 
                           <td class="col stack" width="33.33%" valign="top" style="padding:.5rem .75rem; text-align:left; color:#291142; font-size:.75rem; line-height:1.25rem;">
-                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2015/img/totem.png" width="168" height="140" alt="Kit escolar com mochila e estojo em Duratran" style="width:100%; max-width:10.5rem; height:auto; display:block; margin:0 auto .5rem auto; border-radius:.25rem;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2020/img/cruzeiro.png" width="168" height="140" alt="Kit escolar com mochila e estojo em Duratran" style="width:100%; max-width:10.5rem; height:auto; display:block; margin:0 auto .5rem auto; border-radius:.25rem;">
                             <p style="margin:0 0 .8rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700;">
                               Colégio Cruzeiro
                             </p>
@@ -102,7 +102,7 @@
                           </td>
 
                           <td class="col stack" width="33.33%" valign="top" style="padding:.5rem .75rem; text-align:left; color:#291142; font-size:.75rem; line-height:1.25rem;">
-                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2015/img/kit.png" width="168" height="140" alt="Bolsa crossbody personalizada em Duratran" style="width:100%; max-width:10.5rem; height:auto; display:block; margin:0 auto .5rem auto; border-radius:.25rem;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2020/img/brasas.png" width="168" height="140" alt="Bolsa crossbody personalizada em Duratran" style="width:100%; max-width:10.5rem; height:auto; display:block; margin:0 auto .5rem auto; border-radius:.25rem;">
                             <p style="margin:0 0 .8rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700;">
                               Brasas
                             </p>
