--- a/email 22/index.html
+++ b/email 22/index.html
@@ -19,7 +19,6 @@
         .icons-row td{padding:0 .375rem 0 0!important}
         .col{display:block!important;width:100%!important}
         .card-pad{padding:1.25rem 1.25rem .25rem 1.25rem!important}
-
         .no-stack-2 .stack{
           display:table-cell!important;
           width:50%!important;
@@ -31,8 +30,8 @@
           vertical-align:top!important;
         }
         .no-stack-2 .col img{
-          max-width:100%!important;
-          height:auto!important;
+          width:160px!important;
+          height:200px!important;
         }
       }
     </style>
@@ -77,12 +76,12 @@
                       <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="no-stack-2">
                         <tr>
                           <td class="col stack" width="50%" valign="top" style="padding:.5rem; text-align:center;">
-                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2022/img/lubrax.png" width="260" height="216" alt="Kits de boas-vindas" style="width:100%; max-width:16.25rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2022/img/lubrax.png" width="160" height="200" alt="Mala resistente de alto impacto e gravação frontal da marca" style="width:160px; height:200px; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
                             <p style="margin:0; font-size:.75rem; line-height:1.25rem; color:#291142;">
                               <strong>Lubrax:</strong> Mala resistente em ABS de alto impacto, com textura exclusiva e gravação frontal da marca.</p>
                           </td>
                           <td class="col stack" width="50%" valign="top" style="padding:.5rem; text-align:center;">
-                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2022/img/mercedes.png" width="260" height="216" alt="Brindes e materiais promocionais" style="width:100%; max-width:16.25rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2022/img/mercedes.png" width="160" height="200" alt="Powerbank com impressão customizada e caderno em corino com gravação em baixo relevo" style="width:160px; height:200px; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
                             <p style="margin:0; font-size:.75rem; line-height:1.25rem; color:#291142;">
                               <strong>Mercedes-Benz:</strong> Powerbank com impressão customizada e caderno em corino com gravação em baixo relevo. </p>
                           </td>
@@ -97,7 +96,7 @@
                         Cada detalhe é pensado para representar o que sua marca tem de melhor, com qualidade, prazo e cuidado em cada etapa.
                       </p>
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                        <strong>Fale com nossa equipe</strong> e descubra o brinde certo para sua próxima ação.
+                        <a href="https://wa.me/5521998333323" target="_blank" rel="noopener" style="color:#291142; font-weight:700; text-decoration:underline;">Fale com nossa equipe</a> e descubra o brinde certo para sua próxima ação.
                       </p>
 
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
