--- a/email 26/index.html
+++ b/email 26/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="x-preheader" content="Algumas entregas recentes que refletem nosso compromisso com qualidade, inovação e atenção aos detalhes.">
-    <title>Entregas recentes — Plure</title>
+    <meta name="x-preheader" content="Na Plure, cada projeto é único. Atendimento consultivo para orientar as melhores soluções.">
+    <title>Atendimento consultivo — Plure</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
       @media only screen and (max-width:37.5rem){
@@ -17,88 +17,60 @@
         .logo-footer{width:7.5rem!important;height:auto!important}
         .icon-social{width:1.5rem!important;height:1.5rem!important}
         .icons-row td{padding:0 .375rem 0 0!important}
+        .col{display:block!important;width:100%!important}
+        .card-pad{padding:1.25rem 1.25rem .25rem 1.25rem!important}
       }
-      @media (prefers-color-scheme: dark){
-        .card{background:#F2EEF4!important;color:#291142!important}
-        .hero{background:#F2EEF4!important}
-        .bluebar{background:#2EB4EF!important}
-        .footer{background:#502262!important;color:#F2EEF4!important}
-      }
-      /*[if mso]>*//**/
-      body,table,td,p,a,span{font-family:Arial,Helvetica,sans-serif!important}
-      /**/
     </style>
   </head>
   <body role="article" aria-roledescription="email" style="margin:0; padding:0; width:100%!important; height:100%!important; background:#f2f4f7; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
-    <div style="display:none; max-height:0; overflow:hidden; font-size:.0625rem; line-height:.0625rem; color:#f2f4f7;">
-      Algumas entregas recentes que refletem nosso compromisso com qualidade, inovação e atenção aos detalhes.&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
-    </div>
 
     <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background:#f2f4f7;">
       <tr>
         <td align="center" style="padding:1.5rem .75rem;">
           <table role="presentation" cellpadding="0" cellspacing="0" width="600" class="wrapper" style="width:37.5rem; max-width:37.5rem;">
             <tr>
-              <td class="card" style="background:#ffffff; border-radius:.5rem; overflow:hidden;">
-                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#F2EEF4;">
+              <td class="card" style="background:#F2EEF4; border-radius:.5rem; overflow:hidden;">
+                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#502262;">
                   <tr>
-                    <td align="center" style="padding:1.25rem 2rem 1rem 2rem; text-align:center;">
+                    <td align="center" style="padding:1.25rem 2rem; text-align:center;">
                       <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2005/img/plure-logo-header.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; margin:0 auto; display:block;">
+                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/plure-logo-footer.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; display:block; margin:0 auto; filter:brightness(0) invert(1);">
                       </a>
                     </td>
                   </tr>
                 </table>
 
-              <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
-                <tr>
-                  <td>
-                    <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2005/img/header-img.png" width="600" alt="Equipe colaborando em reunião" style="display:block; width:100%; height:auto; border:0;">
-                  </td>
-                </tr>
-              </table>
-
-              <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
-                <tr>
-                  <td style="padding:1.5rem 2rem 1.25rem 2rem; color:#291142; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
-                    <p class="greet" style="margin:0 0 .5rem 0; font-size:1.125rem; line-height:1.75rem; font-weight:700; color:#291142;">Olá <span>*|PRIMEIRO_NOME|*</span>, tudo bem?</p>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                      Na Plure, acompanhamos de perto as mudanças do mercado para apoiar empresas que buscam soluções em comunicação visual e brindes corporativos.
-                    </p>
-                    <p style="margin:0 0 .5rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">Hoje queremos compartilhar algumas <span style="font-weight:600;">tendências que estão se destacando em 2025:</span></p>
-                    <ul style="margin:.5rem 0 1rem 0; padding:0 0 0 1.125rem; color:#291142;">
-                      <li style="margin:0 0 .625rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        <strong style="font-weight:600;">Sustentabilidade como prioridade:</strong> pequenas mudanças podem gerar grandes resultados. Recentemente, apoiamos nossos parceiros na adoção de <strong style="font-weight:600;">capas de ráfia reutilizáveis para pallets</strong>, reduzindo o uso de filmes plásticos descartáveis uma solução simples, eficiente e com menor impacto ambiental.
-                      </li>
-                      <li style="margin:0 0 .625rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        <strong style="font-weight:600;">Personalização total:</strong> soluções sob medida para reforçar a identidade de cada marca.
-                      </li>
-                      <li style="margin:0; font-size:.8125rem; line-height:1.5rem;">
-                        <strong style="font-weight:600;">Integração entre físico e digital:</strong> materiais que conectam experiência presencial com canais online.
-                      </li>
-                    </ul>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                      Esses movimentos mostram como é importante contar com fornecedores <strong style="font-weight:600;">que pensam além do produto e atuam de forma consultiva.</strong>
-                    </p>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                      Fale com nosso time e descubra as melhores soluções para o seu projeto.
-                    </p>
-
-                    <table role="presentation" cellpadding="0" cellspacing="0" align="center" style="margin:.25rem auto 0 auto;">
-                      <tr>
-                        <td align="center" style="text-align:center;">
-                          <a href="https://wa.me/5521998333323" target="_blank" rel="noopener"
-                            style="display:inline-block; background:#F2EEF4; color:#10b6eb !important; font-weight:700; text-decoration:none; border-radius:.375rem; padding:.75rem 1.25rem; font-size:.8125rem; line-height:1.25rem; border:.125rem solid #10b6eb;">
-                            Entre em contato
-                          </a>
-                        </td>
-                      </tr>
-                    </table>
-
-                  </td>
-                </tr>
-              </table>
-
+                <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
+                  <tr>
+                    <td class="card-pad" style="padding:1.5rem 2rem 1.5rem 2rem; color:#291142;">
+                      <p style="margin:1rem 0 .75rem 0; font-size:.8125rem; line-height:1.5rem;">
+                        Olá <span>*|PRIMEIRO_NOME|*</span>, tudo bem?
+                      </p>
+                
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
+                        Com o início do ano, chegam também novas demandas e, claro, a temporada mais vibrante do calendário: <strong>Verão e Carnaval</strong>.
+                        Eventos, ativações, ajustes de comunicação visual… tudo começa a ganhar ritmo já em janeiro.
+                      </p>
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
+                        <strong>E é exatamente por isso que estamos por aqui:</strong> para simplificar seus próximos projetos com agilidade e cuidado em cada etapa.
+                      </p>
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
+                        Na Plure, cuidamos de tudo comunicação visual, brindes e ativações completas, sempre com prazos claros e execução impecável.
+                      </p>
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
+                        Se você já está planejando ações para o Carnaval, campanhas de início de ano ou ajustes nos espaços da empresa, nossa equipe está pronta para apoiar.
+                      </p>
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
+                        <a href="https://wa.me/5521998333323" target="_blank" rel="noopener" style="color:#291142; font-weight:700; text-decoration:underline;">
+                          Fale com a gente</a> e garanta um início de 2026 mais leve, organizado e com entregas de alto impacto.
+                      </p>
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
+                        Um abraço,<br>
+                        Equipe Plure
+                      </p>
+                    </td>
+                  </tr>
+                </table>
 
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="bluebar" style="background:#10b6eb;">
                   <tr>
