--- a/email 04/index.html
+++ b/email 04/index.html
@@ -44,7 +44,7 @@
                   <tr>
                     <td align="center" style="padding:1.25rem 2rem 1rem 2rem; text-align:center;">
                       <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                        <img src="https://cdn.discordapp.com/attachments/1089566799714078840/1422684613343711272/plure-logo-branco_2.png?ex=68e81dcc&is=68e6cc4c&hm=6da60969495741850ab53106733bc9b2262374ae344bf8bfa6e584d94fb55a48&" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; margin:0 auto; display:block;">
+                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/plure-logo-footer.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; margin:0 auto; display:block;">
                       </a>
                     </td>
                   </tr>
@@ -60,7 +60,7 @@
                       <table role="presentation" cellpadding="0" cellspacing="0" width="100%">
                         <tr>
                           <td class="stack" width="180" style="width:11.25rem; vertical-align:middle;">
-                            <img src="https://cdn.discordapp.com/attachments/1089566799714078840/1424953730624917584/Kanauf.png?ex=68e7cd53&is=68e67bd3&hm=0b10b830e1a423426aa4e2cb590f7064bbc241781ac7ad3f6882a5c69643f304&" width="180" alt="Knauf - Kit comemorativo" style="display:block; width:11.25rem; height:auto; border:0; border-radius:.25rem;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/Kanauf.png" width="180" alt="Knauf - Kit comemorativo" style="display:block; width:11.25rem; height:auto; border:0; border-radius:.25rem;">
                           </td>
                           <td class="stack" style="vertical-align:middle; padding-left:1rem;">
                             <p style="margin:0 0 .375rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700; color:#291142;">Knauf - Kit comemorativo</p>
@@ -74,7 +74,7 @@
                       <table role="presentation" cellpadding="0" cellspacing="0" width="100%">
                         <tr>
                           <td class="stack" width="180" style="width:11.25rem; vertical-align:middle;">
-                            <img src="https://cdn.discordapp.com/attachments/1089566799714078840/1424953730280722442/Mochila.png?ex=68e7cd53&is=68e67bd3&hm=31b977b9a66950b22da7f84605675d540747e7bd13298f2af7d91cdb5eb053fd&" width="180" alt="Cultura Inglesa - Sacochila" style="display:block; width:11.25rem; height:auto; border:0; border-radius:.25rem;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/Mochila.png" width="180" alt="Cultura Inglesa - Sacochila" style="display:block; width:11.25rem; height:auto; border:0; border-radius:.25rem;">
                           </td>
                           <td class="stack" style="vertical-align:middle; padding-left:1rem;">
                             <p style="margin:0 0 .375rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700; color:#291142;">Cultura Inglesa - Sacochila</p>
@@ -88,7 +88,7 @@
                       <table role="presentation" cellpadding="0" cellspacing="0" width="100%">
                         <tr>
                           <td class="stack" width="180" style="width:11.25rem; vertical-align:middle;">
-                            <img src="https://cdn.discordapp.com/attachments/1089566799714078840/1424953729966276659/Trofeu.png?ex=68e7cd53&is=68e67bd3&hm=edf0cfd6d695311f9eb79eb5d17a93329c1e1dd67f74b71e25bed752a31d6da3&" width="180" alt="GSK - Troféu" style="display:block; width:11.25rem; height:auto; border:0; border-radius:.25rem;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/Trofeu.png" width="180" alt="GSK - Troféu" style="display:block; width:11.25rem; height:auto; border:0; border-radius:.25rem;">
                           </td>
                           <td class="stack" style="vertical-align:middle; padding-left:1rem;">
                             <p style="margin:0 0 .375rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700; color:#291142;">GSK - Troféu</p>
@@ -136,18 +136,18 @@
                         <tr>
                           <td class="footer-stack" width="45%" valign="middle" style="padding-right:1rem; text-align:center; vertical-align:middle;">
                             <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                              <img class="logo-footer" src="https://cdn.discordapp.com/attachments/1089566799714078840/1422684613343711272/plure-logo-branco_2.png?ex=68e81dcc&is=68e6cc4c&hm=6da60969495741850ab53106733bc9b2262374ae344bf8bfa6e584d94fb55a48&" width="70%" height="70%" alt="Plure" style="height:auto; filter:brightness(0) invert(1); margin:0 auto .75rem auto; display:block;">
+                              <img class="logo-footer" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/plure-logo-footer.png" width="70%" height="70%" alt="Plure" style="height:auto; filter:brightness(0) invert(1); margin:0 auto .75rem auto; display:block;">
                             </a>
                             <table role="presentation" cellpadding="0" cellspacing="0" align="center">
                               <tr class="icons-row">
                                 <td style="padding-right:.625rem; vertical-align:middle;">
                                   <a href="https://www.instagram.com/plure.vc/" target="_blank" rel="noopener" aria-label="Instagram" style="text-decoration:none;">
-                                    <img class="icon-social" src="https://cdn.discordapp.com/attachments/1089566799714078840/1422371338689056818/instagram-icon.png?ex=68e7a2c9&is=68e65149&hm=e6c39b8bfcbeb7d1e7c7db05d507cce1d561a20a4540919781bdcbbb23fce9d4&" width="28" height="28" alt="Instagram" style="display:block;">
+                                    <img class="icon-social" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/instagram-icon.png" width="28" height="28" alt="Instagram" style="display:block;">
                                   </a>
                                 </td>
                                 <td style="vertical-align:middle;">
                                   <a href="https://www.linkedin.com/company/plure/" target="_blank" rel="noopener" aria-label="LinkedIn" style="text-decoration:none;">
-                                    <img class="icon-social" src="https://cdn.discordapp.com/attachments/1089566799714078840/1422371338982527046/linkedin-icon.png?ex=68e7a2c9&is=68e65149&hm=0bbe4803fead3c36209028c98dddd08e868f88493f34c0732ebcdc27a1d560d3&" width="28" height="28" alt="LinkedIn" style="display:block;">
+                                    <img class="icon-social" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/linkedin-icon.png" width="28" height="28" alt="LinkedIn" style="display:block;">
                                   </a>
                                 </td>
                               </tr>
