--- a/email 11/cicero/index.html
+++ b/email 11/cicero/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="x-preheader" content="Conte com a Plure para comunicação visual e brindes corporativos — rápido, simples e sem dor de cabeça.">
     <title>Conte com a Plure</title>
+
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
       body,table,td,a { -ms-text-size-adjust:100%; -webkit-text-size-adjust:100%; }
       table,td { mso-table-lspace:0pt; mso-table-rspace:0pt; }
@@ -14,7 +16,7 @@
 
       @media only screen and (max-width: 600px) {
         .wrapper { width:100% !important; }
-        .p-body { padding:1.5rem 1.25rem 1.5rem 1.25rem !important; }
+        .p-body { padding:0 1.25rem 1.5rem 1.25rem !important; }
         .footer .stack { display:table-cell !important; width:50% !important; vertical-align:middle !important; }
         .footer-pad { padding:1.25rem !important; }
         .footer p, .footer a { font-size:.75rem !important; line-height:1.125rem !important; }
@@ -22,74 +24,71 @@
         .footer .logo-footer { width:120px !important; height:auto !important; }
         .footer .icon-social { width:24px !important; height:24px !important; }
         .icons-row td { padding:0 .375rem 0 0 !important; }
-        .hero-title { font-size:1.125rem !important; line-height:1.5rem !important; }
       }
 
       @media (prefers-color-scheme: dark) {
         .card { background:#F2EEF4 !important; color:#291142 !important; }
-        .hero { background:#291142 !important; }
         .bluebar { background:#2EB4EF !important; }
         .footer { background:#502262 !important; color:#F2EEF4 !important; }
       }
     </style>
+
     <!--[if mso]>
       <style>
         body, table, td, p, a, span { font-family: Arial, Helvetica, sans-serif !important; }
       </style>
     <![endif]-->
   </head>
+
   <body role="article" aria-roledescription="email" style="margin:0; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
     <div style="display:none; max-height:0; overflow:hidden; font-size:1px; line-height:1px; color:#f2f4f7;">
-      Quem planeja em outubro, entrega com tranquilidade em dezembro.&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
+      Conte com a Plure para comunicação visual e brindes corporativos — rápido e simples.&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
     </div>
+
     <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background:#f2f4f7;">
       <tr>
         <td align="center" style="padding:1.5rem .75rem;">
           <table role="presentation" cellpadding="0" cellspacing="0" width="600" class="wrapper" style="width:37.5rem; max-width:37.5rem;">
             <tr>
               <td class="card" style="background:#F2EEF4; border-radius:.5rem; overflow:hidden;">
-
-                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#291142;">
-                  <tr>
-                    <td align="left" style="padding:1.75rem 1.5rem 1.25rem 2.5rem; text-align:left;">
-                      <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none; display:inline-block;">
-                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/plure-logo-footer.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; display:block; margin:0; filter:brightness(0) invert(1);">
-                      </a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="padding:0 2.5rem 1rem 2.5rem;">
-                      <p class="hero-title" style="margin:0; font-size:1.5rem; line-height:1.75rem; font-weight:600; color:#F2EEF4;">
-                        Ambientes produtivos ganham muito quando a comunicação visual é clara, funcional e bem executada
-                      </p>
-                    </td>
-                  </tr>
-                </table>
-
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
                   <tr>
-                    <td class="p-body" style="padding:2.5rem 2.5rem 2.5rem 2.5rem; font-family:'Open Sans', Arial, Helvetica, sans-serif; color:#291142;">
-                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.25rem;">
-                        Para atender à necessidade da Haleon de aprimorar a gestão visual de sua produção, desenvolvemos um projeto completo de adesivação para seus painéis.
-                      </p>
-                      <a href="https://plurecomercial.com/portfolios/" target="_blank" rel="noopener" style="text-decoration:none;">
-                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2024/img/adesivacao.png" width="515" height="290" alt="Painel adesivado marcante" style="width:100%; max-width:520px; height:auto; border-radius:.25rem; margin:0 auto 1rem auto; display:block;">
+                    <td align="center" style="padding:0.5rem 1.5rem 0 1.5rem;">
+                      <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
+                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2011/img/plure-logo-header.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; margin:0 auto; display:block;">
                       </a>
-                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
-                        O layout foi pensado para otimizar o fluxo de informações, aumentar a clareza e tornar o uso diário mais intuitivo. Já a aplicação, realizada com precisão, 
-                        garantiu um acabamento de alto padrão e excelente durabilidade.
-                      </p>
-                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
-                        <strong>O resultado?</strong> Um painel visualmente marcante, altamente funcional e que contribui diretamente para a eficiência e organização do processo produtivo.
-                      </p>
-                      <p style="margin:0 0 .5rem 0; font-size:.8125rem; line-height:1.375rem;">
-                        Quer elevar a qualidade dos seus ambientes operacionais? 
-                        <a href="https://wa.me/5521998333323" target="_blank" rel="noopener" style="color:#291142; font-weight:700; text-decoration:underline;">
-                          Fale com a Plure</a> e descubra como unir design, funcionalidade e execução impecável.
-                      </p>
                     </td>
                   </tr>
                 </table>
+
+              <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
+                <tr>
+                  <td class="p-body" style="padding:0 2.5rem 2.5rem 2.5rem; font-family:'Open Sans', Arial, Helvetica, sans-serif; color:#291142;">
+                    <p style="margin:2rem 0 1rem 0; font-size:.8125rem; line-height:1.25rem; font-weight:700;">
+                      Olá <span>*|PRIMEIRO_NOME|*</span>, aqui é o Cícero da Plure.
+                    </p>
+                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem; font-weight:400;">
+                      Fim de ano é sempre correria entre eventos, ativações e ajustes de comunicação.
+                      Nesse momento, a Plure está aqui para simplificar sua rotina e garantir entregas no
+                      prazo, com qualidade e tranquilidade.
+                    </p>
+                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
+                      Com um <strong>atendimento consultivo e próximo, cuidamos de cada detalhe, do planejamento à execução</strong>
+                      para que você tenha resultados visíveis e sem complicações.
+                    </p>
+                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
+                      Deixe seus próximos projetos de comunicação visual em boas mãos. Estamos prontos para cuidar de tudo por você!
+                    </p>
+                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.375rem;">
+                      Fale com nossa equipe pelo
+                      <a href="https://wa.me/5521998333323" target="_blank" rel="noopener" style="color:#291142; text-decoration:underline; font-weight:700;">WhatsApp</a>
+                      ou responda a este e-mail e garanta entregas de fim de ano com mais tranquilidade.
+                    </p>
+                    <p style="margin:0; font-size:13px; line-height:22px;">Um abraço,</p>
+                    <p style="margin:0; font-size:13px; line-height:22px; font-weight:700;">Cícero</p>
+                  </td>
+                </tr>
+              </table>
 
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="bluebar" style="background:#10b6eb;">
                   <tr>
@@ -108,18 +107,18 @@
                         <tr>
                           <td class="footer-stack" width="45%" valign="middle" style="padding-right:1rem; text-align:center; vertical-align:middle;">
                             <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                              <img class="logo-footer" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/plure-logo-footer.png" width="70%" height="70%" alt="Plure" style="height:auto; filter:brightness(0) invert(1); margin:0 auto .75rem auto; display:block;">
+                              <img class="logo-footer" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2011/img/plure-logo-footer.png" width="240" height="auto" alt="Plure" style="height:auto; filter:brightness(0) invert(1); margin:0 auto .75rem auto; display:block;">
                             </a>
                             <table role="presentation" cellpadding="0" cellspacing="0" align="center">
                               <tr class="icons-row">
                                 <td style="padding-right:.625rem; vertical-align:middle;">
                                   <a href="https://www.instagram.com/plure.vc/" target="_blank" rel="noopener" aria-label="Instagram" style="text-decoration:none;">
-                                    <img class="icon-social" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/instagram-icon.png" width="28" height="28" alt="Instagram" style="display:block;">
+                                    <img class="icon-social" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2011/img/instagram-icon.png" width="28" height="28" alt="Instagram" style="display:block;">
                                   </a>
                                 </td>
                                 <td style="vertical-align:middle;">
                                   <a href="https://www.linkedin.com/company/plure/" target="_blank" rel="noopener" aria-label="LinkedIn" style="text-decoration:none;">
-                                    <img class="icon-social" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/linkedin-icon.png" width="28" height="28" alt="LinkedIn" style="display:block;">
+                                    <img class="icon-social" src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2011/img/linkedin-icon.png" width="28" height="28" alt="LinkedIn" style="display:block;">
                                   </a>
                                 </td>
                               </tr>
