--- a/email 15/cicero/index.html
+++ b/email 15/cicero/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="x-preheader" content="Algumas entregas recentes que refletem nosso compromisso com qualidade, inovação e atenção aos detalhes.">
-    <title>Entregas recentes — Plure</title>
+    <meta name="x-preheader" content="Educação e comunicação caminhando juntas para inspirar, acolher e fortalecer a identidade das escolas.">
+    <title>Projetos educacionais — Plure</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
       @media only screen and (max-width:37.5rem){
@@ -17,88 +17,110 @@
         .logo-footer{width:7.5rem!important;height:auto!important}
         .icon-social{width:1.5rem!important;height:1.5rem!important}
         .icons-row td{padding:0 .375rem 0 0!important}
+        .col{display:block!important;width:100%!important}
+        .card-pad{padding:1.25rem 1.25rem .25rem 1.25rem!important}
+
+        .no-stack .stack{
+          display:table-cell!important;
+          width:33.33%!important;
+          vertical-align:top!important;
+        }
+        .no-stack .col{
+          display:table-cell!important;
+          width:33.33%!important;
+          vertical-align:top!important;
+        }
+        .no-stack .col img{
+          max-width:100%!important;
+          height:auto!important;
+        }
       }
-      @media (prefers-color-scheme: dark){
-        .card{background:#F2EEF4!important;color:#291142!important}
-        .hero{background:#F2EEF4!important}
-        .bluebar{background:#2EB4EF!important}
-        .footer{background:#502262!important;color:#F2EEF4!important}
-      }
-      /*[if mso]>*//**/
-      body,table,td,p,a,span{font-family:Arial,Helvetica,sans-serif!important}
-      /**/
     </style>
   </head>
   <body role="article" aria-roledescription="email" style="margin:0; padding:0; width:100%!important; height:100%!important; background:#f2f4f7; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
-    <div style="display:none; max-height:0; overflow:hidden; font-size:.0625rem; line-height:.0625rem; color:#f2f4f7;">
-      Algumas entregas recentes que refletem nosso compromisso com qualidade, inovação e atenção aos detalhes.&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
-    </div>
 
     <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background:#f2f4f7;">
       <tr>
         <td align="center" style="padding:1.5rem .75rem;">
           <table role="presentation" cellpadding="0" cellspacing="0" width="600" class="wrapper" style="width:37.5rem; max-width:37.5rem;">
             <tr>
-              <td class="card" style="background:#ffffff; border-radius:.5rem; overflow:hidden;">
-                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#F2EEF4;">
+              <td class="card" style="background:#F2EEF4; border-radius:.5rem; overflow:hidden;">
+                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#291142;">
                   <tr>
-                    <td align="center" style="padding:1.25rem 2rem 1rem 2rem; text-align:center;">
+                    <td align="center" style="padding:1.25rem 2rem; text-align:center;">
                       <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
-                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2005/img/plure-logo-header.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; margin:0 auto; display:block;">
+                        <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2004/img/plure-logo-footer.png" width="92" height="32" alt="Plure" style="max-width:4.6875rem; height:auto; display:block; margin:0 auto; filter:brightness(0) invert(1);">
                       </a>
                     </td>
                   </tr>
                 </table>
 
-              <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
-                <tr>
-                  <td>
-                    <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2005/img/header-img.png" width="600" alt="Equipe colaborando em reunião" style="display:block; width:100%; height:auto; border:0;">
-                  </td>
-                </tr>
-              </table>
+                <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
+                  <tr>
+                    <td class="card-pad" style="padding:1.5rem 2rem .5rem 2rem; color:#291142;">
+                      <p style="margin:0 0 .75rem 0; font-size:.8125rem; line-height:1.5rem; font-weight: 700;">
+                        Olá <span>*|PRIMEIRO_NOME|*</span>, tudo bem? Aqui é o Cícero da Plure.
+                      </p>
 
-              <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
-                <tr>
-                  <td style="padding:1.5rem 2rem 1.25rem 2rem; color:#291142; font-family:'Open Sans', Arial, Helvetica, sans-serif;">
-                    <p class="greet" style="margin:0 0 .5rem 0; font-size:1.125rem; line-height:1.75rem; font-weight:700; color:#291142;">Olá <span>*|PRIMEIRO_NOME|*</span>, tudo bem?</p>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                      Na Plure, acompanhamos de perto as mudanças do mercado para apoiar empresas que buscam soluções em comunicação visual e brindes corporativos.
-                    </p>
-                    <p style="margin:0 0 .5rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">Hoje queremos compartilhar algumas <span style="font-weight:600;">tendências que estão se destacando em 2025:</span></p>
-                    <ul style="margin:.5rem 0 1rem 0; padding:0 0 0 1.125rem; color:#291142;">
-                      <li style="margin:0 0 .625rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        <strong style="font-weight:600;">Sustentabilidade como prioridade:</strong> pequenas mudanças podem gerar grandes resultados. Recentemente, apoiamos nossos parceiros na adoção de <strong style="font-weight:600;">capas de ráfia reutilizáveis para pallets</strong>, reduzindo o uso de filmes plásticos descartáveis uma solução simples, eficiente e com menor impacto ambiental.
-                      </li>
-                      <li style="margin:0 0 .625rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        <strong style="font-weight:600;">Personalização total:</strong> soluções sob medida para reforçar a identidade de cada marca.
-                      </li>
-                      <li style="margin:0; font-size:.8125rem; line-height:1.5rem;">
-                        <strong style="font-weight:600;">Integração entre físico e digital:</strong> materiais que conectam experiência presencial com canais online.
-                      </li>
-                    </ul>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                      Esses movimentos mostram como é importante contar com fornecedores <strong style="font-weight:600;">que pensam além do produto e atuam de forma consultiva.</strong>
-                    </p>
-                    <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                      Fale com nosso time e descubra as melhores soluções para o seu projeto.
-                    </p>
+                      <p style="margin:0 0 .75rem 0; font-size:.8125rem; line-height:1.5rem;">
+                        Acreditamos que <strong>educação e comunicação caminham juntas</strong> e que cada projeto escolar é uma oportunidade de inspirar, acolher e fortalecer a identidade da marca.
+                      </p>
 
-                    <table role="presentation" cellpadding="0" cellspacing="0" align="center" style="margin:.25rem auto 0 auto;">
-                      <tr>
-                        <td align="center" style="text-align:center;">
-                          <a href="https://wa.me/5521998333323" target="_blank" rel="noopener"
-                            style="display:inline-block; background:#F2EEF4; color:#10b6eb !important; font-weight:700; text-decoration:none; border-radius:.375rem; padding:.75rem 1.25rem; font-size:.8125rem; line-height:1.25rem; border:.125rem solid #10b6eb;">
-                            Entre em contato
-                          </a>
-                        </td>
-                      </tr>
-                    </table>
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem;">
+                        Por isso, temos orgulho de colaborar com instituições como <strong>Cultura Inglesa</strong>,
+                        <strong>Colégio Cruzeiro</strong> e <strong>Escola Britânica</strong>, desenvolvendo soluções que
+                        <strong> educam, conectam e encantam</strong>.
+                      </p>
+                    </td>
+                  </tr>
 
-                  </td>
-                </tr>
-              </table>
+                  <tr>
+                    <td style="padding:0 1.25rem 0 1.25rem;">
+                      <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="no-stack">
+                        <tr>
+                          <td class="col stack" width="33.33%" valign="top" style="padding:.5rem; text-align:center;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2015/img/sacochila.png" width="168" height="140" alt="Sacochila Cultura Inglesa" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
+                            <p style="margin:0; font-size:.75rem; line-height:1.25rem; color:#291142;">Sacochila Cultura Inglesa</p>
+                          </td>
+                          <td class="col stack" width="33.33%" valign="top" style="padding:.5rem; text-align:center;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2015/img/totem.png" width="168" height="140" alt="Totem Escola Britânica" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
+                            <p style="margin:0; font-size:.75rem; line-height:1.25rem; color:#291142;">Totem Escola Britânica</p>
+                          </td>
+                          <td class="col stack" width="33.33%" valign="top" style="padding:.5rem; text-align:center;">
+                            <img src="https://raw.githubusercontent.com/vicmariucha/plure-email/main/email%2015/img/kit.png" width="168" height="140" alt="Kit escolar colégio Cruzeiro" style="width:100%; max-width:10.5rem; height:auto; border-radius:.25rem; display:block; margin:0 auto .5rem auto;">
+                            <p style="margin:0; font-size:.75rem; line-height:1.25rem; color:#291142;">Kit escolar colégio Cruzeiro</p>
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
 
+                  <tr>
+                    <td style="padding:1rem 2rem 0 2rem;">
+                      <p style="margin:0 0 .75rem 0; font-size:.8125rem; line-height:1.5rem;">
+                        Seja em <strong>campanhas de matrícula</strong>, <strong>sinalização</strong> ou <strong>kits personalizados</strong>, nosso propósito é o mesmo:
+                        <strong> tornar a comunicação das escolas mais leve, inteligente e eficaz</strong>.
+                      </p>
+
+                      <p style="margin:0 0 .75rem 0; font-size:.8125rem; line-height:1.5rem; font-weight:700;">
+                        Vamos planejar juntos seu próximo projeto educacional?
+                      </p>
+
+                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem;">
+                        Um abraço,<br><strong>Cícero</strong>
+                      </p>
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td style="padding:0 2rem 1.5rem 2rem; text-align:center;">
+                      <a href="https://wa.me/55219991803123" target="_blank" rel="noopener"
+                         style="display:inline-block; background:#502262; color:#F2EEF4; font-weight:600; font-size:.875rem; line-height:1rem; text-decoration:none; padding:.875rem 1.25rem; border-radius:.375rem;">
+                        Planejar meu projeto!
+                      </a>
+                    </td>
+                  </tr>
+                </table>
 
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="bluebar" style="background:#10b6eb;">
                   <tr>
